# scholarly-outcome-prediction

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
artifacts/diagnostics/: component_inventory.json  dataset_profile.json  feature_usage_report.json  missingness_summary.csv  pipeline_trace.json  pipeline_trace_design.json  preprocessing_leakage_audit.json  run_artifact_audit.json  target_profile.json  target_profile.md
artifacts/reports/: ablation_review.json  ablation_review.md  benchmark_comparison.json  benchmark_comparison.md  (+4 more)
configs/data/: openalex_debug.yaml  (+5 more)
docs/: adding_a_model.md  architecture.md  benchmark_modes.md  caching_summary.md  calendar_horizon_semantics_diagnosis.json  calendar_horizon_semantics_diagnosis.md  dataset_caching.md  dataset_identity_and_audit.md  experiment-log.md  job_yml_schema.md  prompt4_debug_report.md  refinement_debug_report.md  temporal_h2_review.json  temporal_h2_review.md  tweedie_removal_and_provenance_cleanup.md
notebooks/: exploratory_openalex.ipynb
scripts/: generate_diagnostics.py  run_experiment.py  run_temporal_h2_review.py
tests/: conftest.py  test_acquisition_cache.py  test_benchmark_analysis.py  test_calendar_horizon_targets.py  test_dataset_identity.py  test_diagnostics.py  test_evaluation_metrics.py  test_experiment_config_metadata.py  test_features.py  test_models.py  test_new_benchmark_models_configs.py  test_normalize.py  test_openalex_query.py  test_ridge_configs.py  test_smoke_pipeline.py  test_split.py  test_target_reporting.py  test_validation.py  test_venue_extraction.py
(+93 files in other folders)
