[project]
name = "scholarly-outcome-prediction"
version = "0.1.0"
description = "Reproducible pipeline for predicting scholarly outcomes from OpenAlex metadata"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Research Engineering", email = "example@example.org" },
]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "xgboost>=2.1",
  "requests>=2.32",
  "pyyaml>=6.0",
  "pydantic>=2.8",
  "pyarrow>=17.0",
  "joblib>=1.4",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "pre-commit>=3.8",
  "ipykernel>=6.29",
  "matplotlib>=3.8",
]

[project.scripts]
scholarly-outcome-prediction = "scholarly_outcome_prediction.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

